added room availability widget

--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,3 @@
 .in, .out{ width: 40px!important; margin-right: 5px;}
-.employee-btn{margin-bottom: 5px;}
+.room-empty, .room-full{ width: 60px!important; margin-right: 5px;}
+.employee-btn, .room-btn{margin-bottom: 5px;}
